--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -15,6 +15,9 @@ jobs:
       run: Invoke-WebRequest https://raw.githubusercontent.com/ThuongHai/thuonghai/master/nssm.exe -OutFile nssm.exe
     - name: Extract Ngrok Archive
       run: Expand-Archive ngrok.zip
+    - name: Copy files to Windows Directory.
+      run: copy nssm.exe C:\Windows\System32
+      run: cd ngrok & copy ngrok.exe C:\Windows\System32
     - name: Auth
       run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
