--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
     - name: Download Ngrok
-      run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
+      run: Invoke-WebRequest https://raw.githubusercontent.com/TheDarkMythos/Ngrok-Exe/master/ngrok.exe -OutFile ngrok.exe
     - name: Download NSSM
       run: Invoke-WebRequest https://raw.githubusercontent.com/ThuongHai/thuonghai/master/nssm.exe -OutFile nssm.exe
     - name: Extract Ngrok Archive
@@ -18,9 +18,9 @@ jobs:
     - name: Copy NSSM to Windows Directory.
       run: copy nssm.exe C:\Windows\System32
     - name: Copy NGROK to Windows Directory.
-      run: cd ngrok & copy ngrok.exe C:\Windows\System32
+      run: copy ngrok.exe C:\Windows\System32
     - name: Auth
-      run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
+      run: .\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Enable TS
@@ -29,6 +29,6 @@ jobs:
     - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
     - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "Area69Lab" -Force)
     - name: Create Tunnel
-      run: .\ngrok\ngrok.exe tcp --region ap 3389
+      run: .\ngrok.exe tcp --region ap 3389
       
     
