--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -22,7 +22,13 @@ jobs:
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Make YML file for NGROK.
-      run: "echo authtoken: $Env:NGROK_AUTH_TOKEN > ngrok.yml & echo region: ap >> ngrok.yml & echo tunnels: >> ngrok.yml & echo     default: >> ngrok.yml & echo         proto: tcp >> ngrok.yml & echo         addr: 3389 >> ngrok.yml"
+      run: |
+        echo authtoken: $Env:NGROK_AUTH_TOKEN > ngrok.yml
+        echo region: ap >> ngrok.yml
+        echo tunnels: >> ngrok.yml
+        echo     default: >> ngrok.yml
+        echo         proto: tcp >> ngrok.yml
+        echo         addr: 3389 >> ngrok.yml
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Enable TS
