--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -22,15 +22,14 @@ jobs:
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Make YML file for NGROK.
-      run: |
-        echo authtoken: $Env:NGROK_AUTH_TOKEN > ngrok.yml
-        echo region: ap >> ngrok.yml
-        echo tunnels: >> ngrok.yml
-        echo     default: >> ngrok.yml
-        echo         proto: tcp >> ngrok.yml
-        echo         addr: 3389 >> ngrok.yml
+    - run: echo authtoken: $Env:NGROK_AUTH_TOKEN > ngrok.yml
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+    - run: echo region: ap >> ngrok.yml
+    - run: echo tunnels: >> ngrok.yml
+    - run: echo     default: >> ngrok.yml
+    - run: echo         proto: tcp >> ngrok.yml
+    - run: echo         addr: 3389 >> ngrok.yml
     - name: Enable TS
       run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
     - run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
