--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -18,18 +18,14 @@ jobs:
     - name: Copy NGROK to Windows Directory.
       run: copy ngrok.exe C:\Windows\System32
     - name: Auth
+    - run: Invoke-WebRequest https://raw.githubusercontent.com/ThuongHai/windows-rdp/main/NGROK-AP.bat -OutFile NGROK-AP.bat
       run: .\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Make YML file for NGROK.
-      run: "echo authtoken: $Env:NGROK_AUTH_TOKEN > ngrok.yml"
+      run: NGROK-AP.bat
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-    - run: echo region: ap >> ngrok.yml
-    - run: echo tunnels: >> ngrok.yml
-    - run: echo     default: >> ngrok.yml
-    - run: echo         proto: tcp >> ngrok.yml
-    - run: echo         addr: 3389 >> ngrok.yml
     - name: Enable TS
       run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
     - run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
