--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -30,6 +30,6 @@ jobs:
     - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
     - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "Area69Lab" -Force)
     - name: Create Tunnel
-      run: .\ngrok.exe tcp --region ap 3389
+      run: nssm install ngrok C:\Windows\System32\ngrok.exe start --all --config="C:\Windows\System32\ngrok.yml" & sc start ngrok
       
     
