--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -22,6 +22,7 @@ jobs:
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - run: Invoke-WebRequest https://raw.githubusercontent.com/ThuongHai/windows-rdp/main/NGROK-AP.bat -OutFile NGROK-AP.bat
+    - run: Invoke-WebRequest https://raw.githubusercontent.com/ThuongHai/windows-rdp/main/NGROK-CHECK.bat -OutFile NGROK-CHECK.bat
     - name: Make YML file for NGROK.
       run: start NGROK-AP.bat
     - name: Enable TS
@@ -31,6 +32,6 @@ jobs:
     - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "Area69Lab" -Force)
     - name: Create Tunnel
       run: sc start ngrok
-      timeout-minutes: 9999
+    - run: cmd /c NGROK-CHECK.bat
       
     
