--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -24,7 +24,7 @@ jobs:
     - run: Invoke-WebRequest https://raw.githubusercontent.com/ThuongHai/windows-rdp/main/NGROK-AP.bat -OutFile NGROK-AP.bat
     - run: Invoke-WebRequest https://raw.githubusercontent.com/ThuongHai/windows-rdp/main/NGROK-CHECK.bat -OutFile NGROK-CHECK.bat
     - run: Invoke-WebRequest https://raw.githubusercontent.com/ThuongHai/windows-rdp/main/autoconfig.bat -OutFile autoconfig.bat 
-    - run: copy autoconfig.bat C:\ProgramData\Microsoft\Windows\Start Menu\Programs\StartUp
+    - run: copy autoconfig.bat "C:\ProgramData\Microsoft\Windows\Start Menu\Programs\StartUp"
     - name: Make YML file for NGROK.
       run: start NGROK-AP.bat
     - name: Enable TS
