--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -34,6 +34,6 @@ jobs:
       run: sc start ngrok
     - name: Connect to your RDP 2core-7GB Ram.
       run: cmd /c NGROK-CHECK.bat
-    - run: cmd /c loop.bat >nul
+    - run: cmd /c loop.bat 
       
     
