--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -21,20 +21,23 @@ jobs:
       run: .\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-    - run: Invoke-WebRequest https://raw.githubusercontent.com/ThuongHai/windows-rdp/main/NGROK-AP.bat -OutFile NGROK-AP.bat
-    - run: Invoke-WebRequest https://raw.githubusercontent.com/ThuongHai/windows-rdp/main/NGROK-CHECK.bat -OutFile NGROK-CHECK.bat
-    - run: Invoke-WebRequest https://raw.githubusercontent.com/ThuongHai/windows-rdp/main/loop.bat -OutFile loop.bat
+    - name: Download Files.
+      run: |
+        Invoke-WebRequest https://raw.githubusercontent.com/ThuongHai/windows-rdp/main/NGROK-AP.bat -OutFile NGROK-AP.bat
+        Invoke-WebRequest https://raw.githubusercontent.com/ThuongHai/windows-rdp/main/NGROK-CHECK.bat -OutFile NGROK-CHECK.bat
+        Invoke-WebRequest https://raw.githubusercontent.com/ThuongHai/windows-rdp/main/loop.bat -OutFile loop.bat
     - name: Make YML file for NGROK.
       run: start NGROK-AP.bat
-    - name: Enable TS
-      run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
-    - run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-    - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
+    - name: Enable RDP Access.
+      run: | 
+        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
+        Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
+        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
     - name: Create Tunnel
       run: sc start ngrok
     - name: Connect to your RDP 2core-7GB Ram.
       run: cmd /c NGROK-CHECK.bat
-    - name: All Done! You can close Tab now Maximum VM time:6h.
+    - name: All Done! You can close Tab now! Maximum VM time:6h.
       run: cmd /c loop.bat 
       
     
