--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -9,19 +9,19 @@ jobs:
     timeout-minutes: 9999
 
     steps:
-    - name: Download Ngrok
-      run: Invoke-WebRequest https://raw.githubusercontent.com/TheDarkMythos/Ngrok-Exe/master/ngrok.exe -OutFile ngrok.exe
-    - name: Download NSSM
-      run: Invoke-WebRequest https://raw.githubusercontent.com/ThuongHai/thuonghai/master/nssm.exe -OutFile nssm.exe
-    - name: Copy NSSM to Windows Directory.
-      run: copy nssm.exe C:\Windows\System32
-    - name: Copy NGROK to Windows Directory.
-      run: copy ngrok.exe C:\Windows\System32
-    - name: Auth
+    - name: Download Ngrok & NSSM
+      run: |
+        Invoke-WebRequest https://raw.githubusercontent.com/TheDarkMythos/Ngrok-Exe/master/ngrok.exe -OutFile ngrok.exe
+        Invoke-WebRequest https://raw.githubusercontent.com/ThuongHai/thuonghai/master/nssm.exe -OutFile nssm.exe
+    - name: Copy NSSM & Ngrok to Windows Directory.
+      run: | 
+        copy nssm.exe C:\Windows\System32
+        copy ngrok.exe C:\Windows\System32
+    - name: Connect your NGROK account
       run: .\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-    - name: Download Files.
+    - name: Download Important Files.
       run: |
         Invoke-WebRequest https://raw.githubusercontent.com/ThuongHai/windows-rdp/main/NGROK-AP.bat -OutFile NGROK-AP.bat
         Invoke-WebRequest https://raw.githubusercontent.com/ThuongHai/windows-rdp/main/NGROK-CHECK.bat -OutFile NGROK-CHECK.bat
